2003-10-22  Nick Clifton  <nickc@redhat.com>

	* peicode.h (coff_swap_scnhdr_in): Only remove padding when
	processing an executable.

2003-10-22  Jakub Jelinek  <jakub@redhat.com>

	* elflink.c (_bfd_elf_export_symbol): Adjust for globals and locals
	field changes.
	(_bfd_elf_link_assign_sym_version): Likewise.
	* elflink.h (size_dynamic_sections): Likewise.

2003-10-21  Alexandre Oliva  <aoliva@redhat.com>,
	    Michael Snyder  <msnyder@redhat.com>

	* archures.c (bfd_mach_sh4a, bfd_mach_sh4al_dsp, bfd_mach_sh4_nofpu,
	bfd_mach_sh4a_nofpu): New machine types.
	* bfd-in2.h: Rebuilt.
	* cpu-sh.c (compatible): Remove unused function.
	(SH4A_NEXT, SH4AL_DSP_NEXT, SH4_NOFPU_NEXT, SH4A_NOFPU_NEXT): New.
	(arch_info_struct): Add sh4a, sh4al_dsp, sh4-nofpu and sh4a-nofpu.
	* elf32-sh.c (sh_elf_set_mach_from_flags): Handle them.

2003-10-21  Wouter van Heyst <wouter@vidicode.nl>

	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Correct text
	describing mismatched formats involving the Maverick FP type.

2003-10-21  Anil Paranjpe  <anilp1@KPITCummins.com>

	* binary.c (binary_object_p): Pass machine flag along with
	architecture.

2003-10-21  Thorsten Brehm  <brehm@gmx.net>

	* archures.c (bfd_default_scan): Add support for mcf528x.
	* ieee.c (ieee_write_processor): Likewise.

2003-10-21  Peter Barada  <pbarada@mail.wm.sps.mot.com>
            Bernardo Innocenti  <bernie@develer.com>

	* archures.c: Add MCF528x (MCFv4) support.
	* bfd/cpu-m68k.c (arch_info_struct): Likewise.
	* bfd-in2.h: Regenerate.

2003-10-20  Andrew Cagney  <cagney@redhat.com>

	* targets.c: Replace "struct sec" with "struct bfd_section"
	* syms.c, sparclynx.c, section.c, opncls.c: Ditto.
	* libcoff-in.h, libbfd-in.h, elfxx-target.h: Ditto.
	* elf.c, coffgen.c, bfd.c, bfd-in.h, aoutf1.h: Ditto.
	* aout-tic30.c, aout-target.h:
	* bfd-in2.h, libcoff.h, libbfd.h: Regenerate.
	
2003-10-18  Hans-Peter Nilsson  <hp@bitrange.com>

	Support linker relaxation of new R_MMIX_PUSHJ_STUBBABLE relocs.