@@ -1,3 +1,14 @@
+2003-10-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (get_tls_mask): Add toc_symndx param, save toc
+	reloc symbol index to it.  Don't allow gd syms in shared libs
+	to be optimized.
+	(ppc64_elf_tls_optimize): Adjust get_tls_mask call.
+	(ppc64_elf_size_stubs): Likewise.
+	(ppc64_elf_relocate_section): Check that tls relocs are only used
+	with tls syms, and similarly for non-tls.  Correct symbol used
+	when optimizing toc tls code.
+
 2003-10-22  Nick Clifton  <nickc@redhat.com>
 
 	* peicode.h (coff_swap_scnhdr_in): Only remove padding when
